# sequitur

./: .gitignore  CMakeLists.txt  README.md  client.py  docker-compose.yml  run_bench.sh  run_n2n.sh  run_pipeline.sh  sequitur_dashboard.json  vector.toml
.github/workflows/: build.yml
gateway/: gateway_test.go  go.mod  main.go  protocol.go  protocol_test.go  run_tests.sh  shm.go  shm_test.go
grafana/: dashboard.yml  dashboards.yml  datasources.yml
grafana/dashboards/: sequitur_dashboard.json
include/sequitur/concurrency/: MPSCQueue.hpp  SPSCQueue.hpp
include/sequitur/core/: EgressPacket.hpp  IngressPacket.hpp  MatchingEngine.hpp  MetricsPacket.hpp  OrderBook.hpp
include/sequitur/memory/: ObjectPool.hpp
include/sequitur/utils/: MetricsWorker.hpp  Timer.hpp
src/: main.cpp
src/core/: MatchingEngine.cpp
src/utils/: MetricsWorker.cpp
tests/benchmarks/: bench_pure_latency.cpp
tests/integration/: test_core_integration.cpp  test_pipeline_integration.cpp
tests/unit/: test_metricsworker.cpp  test_mpscqueue.cpp  test_spscqueue.cpp
